2014-08-06  Brian J. Burg  <burg@cs.washington.edu>

        Web Inspector: convert ReplayManager to a promise-based API
        https://bugs.webkit.org/show_bug.cgi?id=135249

        Reviewed by Timothy Hatcher.

        Fix some assertions to match ReplayController's preconditions.

        * inspector/InspectorReplayAgent.cpp:
        (WebCore::InspectorReplayAgent::replayToPosition):
        (WebCore::InspectorReplayAgent::replayToCompletion):

2014-08-05  Brent Fulgham  <bfulgham@apple.com>

        [Mac] Unable to scroll to bottom of nested scrollable areas
        https://bugs.webkit.org/show_bug.cgi?id=135637
        <rdar://problem/17910241>

        Reviewed by Zalan Bujtas.

        Test: platform/mac/fast/scrolling/scroll-latched-nested-div.html

        Avoid truncating the fractional portion of scroll ranges.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::updateScrollbarsAfterLayout): Round
        the LayoutUnit values for scroll width and height rather than
        truncating.

2014-08-06  Andy Estes  <aestes@apple.com>

        [iOS] QuickLook returns an invalid MIME type for some documents
        https://bugs.webkit.org/show_bug.cgi?id=135651

        Reviewed by David Kilzer.

        r172151 ensured that we ignore QuickLook delegate messages after an error, but neglected to do so for
        connectionDidFinishLoading:. Do not call ResourceLoader::didFinishLoading() if an error has occurred.

        * platform/network/ios/QuickLook.mm:
        (-[WebResourceLoaderQuickLookDelegate connectionDidFinishLoading:]):

2014-08-06  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r172155.
        https://bugs.webkit.org/show_bug.cgi?id=135659

        ChangeLog and commit message are wrong (Requested by estes on
        #webkit).

        Reverted changeset:

        "Unreviewed, rolling out r172145."
        https://bugs.webkit.org/show_bug.cgi?id=135657
        http://trac.webkit.org/changeset/172155
