@@ -1,3 +1,14 @@
+2014-08-06  Andreas Kling  <akling@apple.com>
+
+        Remove unused RenderBox::reflectionBox().
+        <https://webkit.org/b/135661>
+
+        Reviewed by Antti Koivisto.
+
+        * rendering/RenderBox.cpp:
+        (WebCore::RenderBox::reflectionBox): Deleted.
+        * rendering/RenderBox.h:
+
 2014-08-06  Brian J. Burg  <burg@cs.washington.edu>
 
         Web Inspector: convert ReplayManager to a promise-based API
